updating css for admin header and login info not overlapping, fixing deprecated locations of tasks in acts as family, and updating engines

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -122,7 +122,7 @@ ID BASE STYLES
 }
 
 #bcNav {
-	width:100%;
+	width:70%;
 	background-color:#D3E3DC;
 	padding:.4em;
 	padding-left:1em;
